WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291163
[content-visibility] Background can't be obscured when child content is skipped
https://bugs.webkit.org/show_bug.cgi?id=291163
Summary
[content-visibility] Background can't be obscured when child content is skipped
alan
Reported
2025-04-06 12:58:15 PDT
ssia
Attachments
Patch
(2.50 KB, patch)
2025-04-06 13:02 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(2.50 KB, patch)
2025-04-07 05:37 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-04-06 13:02:14 PDT
Created
attachment 474845
[details]
Patch
alan
Comment 2
2025-04-07 05:37:49 PDT
Created
attachment 474857
[details]
[fast-cq]Patch
EWS
Comment 3
2025-04-07 07:33:35 PDT
Committed
293363@main
(1384ea02ecd2): <
https://commits.webkit.org/293363@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 474857
[details]
.
Radar WebKit Bug Importer
Comment 4
2025-04-07 07:34:14 PDT
<
rdar://problem/148745322
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug