[content-visibility] Background can't be obscured when child content is skipped https://bugs.webkit.org/show_bug.cgi?id=291163

Reviewed by Antti Koivisto.

* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::foregroundIsKnownToBeOpaqueInRect const):
* Source/WebCore/rendering/RenderBoxInlines.h:
(WebCore::RenderBox::backgroundIsKnownToBeObscured):

Canonical link: https://commits.webkit.org/293363@main